fix(post): title would wrap incorrectly in posts with no image/thumbnail

--- a/src/views/post/post.module.css
+++ b/src/views/post/post.module.css
@@ -29,6 +29,10 @@
   float: left;
 }
 
+.hideButtonWrapperNoImage {
+  height: 25px !important;
+}
+
 .postDesktop .hideButton {
   background-repeat: no-repeat;
   background-position: center;
